# AI4Science

./: .gitignore  =0.9.8  LICENSE  MANIFEST.in  MIRROR.url  PLUGIN_STANDARD.md  README.md  install-singularity.sh  install.ps1  install.sh  pwm_agent_core.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  rc.yml  release.yml
ai4science/: __init__.py  cli.py  discovery.py  memory.py  pwm_account.py  staking.py  user.py  wallet.py
ai4science/agents/: __init__.py  _context.py  base.py  claude_agent.py  codex_agent.py  images.py  mcp_pwm.py  mentions.py  none_agent.py  permissions.py  streaming.py  subagents.py
ai4science/commands/: __init__.py  chat.py  compute.py  contribute.py  custom_commands.py  feedback.py  init.py  judge.py  llm.py  login.py  overseer.py  package.py  plugins.py  provider.py  register_agent.py  stake.py  status.py  submit.py  tools.py  update.py  validate.py
ai4science/compute/: __init__.py  attribution.py  billing.py  dispatch.py  founders.py  gitsync.py  http_provider.py  http_transport.py  lease.py  modal_runner.py  pricing.py  provider.py  registry.py  transport.py
ai4science/harness/: __init__.py  algorithm_tools.py  cancer_tools.py  cassi_tools.py  codex_repl.py  compaction.py  compute_tools.py  contribution_eval.py  diff.py  drug_design_tools.py  events.py  forward_model_tools.py  interrupt.py  lineedit.py  llm_gateway.py  loop.py  mcp_client.py  mcp_compute_server.py  mcp_pwm.py  mentions.py  onboard_tools.py  optics_tools.py  paper_bundle.py  paper_load.py  paper_review.py  paper_tools.py  permissions.py  persistence.py  proxy_proto.py  pwm_data.py  pwm_gate.py  recap.py  registry_router.py  registry_router_tools.py  repl.py  research_tools.py  sdk_repl.py  session.py  spinner.py  subagents.py  (+3 more)
ai4science/judge/: __init__.py
ai4science/llm/: __init__.py  execute.py  gemini.py  ledger.py  openai_compat.py  pricing.py  registry.py  routing.py
ai4science/prompts/: __init__.py  ai4science_system.md  ai4science_system_plan.md  ai4science_system_readonly.md  ai4science_system_research.md
ai4science/reports/: __init__.py  certificate.py  review_report.py
ai4science/schemas/: __init__.py  artifact.py  benchmark.py  principle.py  solution.py  spec.py
ai4science/templates/: benchmark.template.md  principle.template.md  solution.template.md  spec.template.md
deploy/: ai4science-llm-gateway.service  codex-keepalive.service  codex-keepalive.timer
docs/: AGENTS_STATUS_AND_ONE_WALLET_TEST_2026-06-10.md  AGENT_IMPROVEMENT_EARNING_METHOD.md  AGENT_POOL_API.md  AI4SCIENCE_USER_MANUAL.md  CLAUDE_CODE_PARITY.md  COMPUTE_HTTP_RELAY_DESIGN.md  COMPUTE_MECHANISM.md  COMPUTE_PROVIDERS_DESIGN.md  COMPUTE_PROVIDER_GUIDE.md  FEEDBACK_GUIDE.md  INSTALL.md  RELEASING.md  SUBGPU_SETUP_WINDOWS.md  TEST_AGENTS_WITH_ONE_WALLET.md
examples/compute_demo/: README.md  run_demo.sh  run_solver.py
examples/draft_principle/: README.md  benchmark.md  principle.md  solution.md  spec.md
examples/find_fix_verify/: README.md  run_demo.sh
examples/gitsync_compute/: README.md  run_demo.sh
examples/model_selection/: README.md  run_demo.sh
examples/modes/: README.md  run_demo.sh
pwm_core/: __init__.py
pwm_core/forward_compiler/: __init__.py  bridge.py  compiler.py  ir.py  primitives.py  validate.py
pwm_core/optics/: __init__.py  analysis.py  coded.py  diff_raytrace.py  grating.py  io_zemax.py  monte_carlo.py  prescription.py  pwm_bridge.py  radiometry.py  raytrace.py  stray_light.py  thinfilm.py  wave.py
pwm_core/physics/: base.py
reports/: overseer_report.json  overseer_report.md
scripts/: codex_keepalive.sh  cut-rc.sh  install.ps1  install.sh  promote-stable.sh  register_founder_providers.sh  test-publish.sh  test_agents_mining.sh
tests/: conftest.py  test_agent_usage_hook.py  test_agents.py  test_bare_launch.py  test_chat.py  test_chat_common_session.py  test_claude_codex_via_packages.py  test_cli.py  test_codex_agent.py  test_codex_repl.py  test_commands_plugins.py  test_commands_plugins_test.py  test_compute.py  test_compute_guard.py  test_compute_join.py  test_compute_lease.py  test_compute_liveness.py  test_compute_marketplace.py  test_compute_tools.py  test_contract_version.py  test_control_plane_client.py  test_cross_call.py  test_custom_commands.py  test_discovery.py  test_dispatch_hint.py  test_drug_cancer_agents.py  test_entrypoint_discovery.py  test_external_bundles.py  test_external_evaluator_verifier.py  test_forward_model_tools.py  test_gpu_core_capability.py  test_harness_adapter_anthropic.py  test_harness_adapter_codex.py  test_harness_adapter_coverage.py  test_harness_adapter_gemini.py  test_harness_adapter_openai.py  test_harness_agent_plugins.py  test_harness_agents_build.py  test_harness_agents_capabilities.py  test_harness_agents_dispatch.py  (+102 more)
tests/fixtures/: doublet.zmx
tests/imaging/: test_agent_agent_binding.py  test_agent_e2e.py  test_agent_hostsim.py  test_agent_planner_injection.py  test_benchmark.py  test_foundry_agent_e2e.py  test_foundry_runner.py  test_imaging_external_eval_integration.py  test_imaging_runner.py  test_llm_e2e.py  test_llm_extract.py  test_llm_planner.py  test_llm_prompt.py  test_llm_recall.py  test_loop_closure.py  test_payload.py  test_payload_accurate.py  test_planner.py  test_rsi_round.py  test_rsi_round_integration.py  test_rsi_search_integration.py  test_rsi_search_loop.py  test_rsi_search_strategy.py
tests/learning/: test_agent_e2e.py  test_agent_hostsim.py  test_capability_graph.py  test_grader.py  test_learning_foundry_binding.py  test_learning_foundry_e2e.py  test_learning_prompt.py  test_learning_spec.py  test_quiz_check.py  test_rsi_search.py
tests/machine/: test_agent.py  test_capabilities.py  test_claude_driver.py  test_machine_foundry.py  test_machine_spec.py  test_pause.py  test_rsi_search.py  test_session.py  test_sessions.py  test_state.py  test_supervisor.py  test_telegram.py  test_trust.py
tests/manager/: test_console_execution.py  test_executor.py  test_input_staging.py  test_login_console.py  test_manager_foundry.py  test_manager_hostsim.py  test_manager_spec.py  (+4 more)
(+234 files in other folders)
