[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4science"
version = "0.1.0"
description = "Open-source contribution tool for Physics World Model (PWM). Create, validate, package, and submit Principles, Specs, Benchmarks, and Solutions for verified AI4Science workflows."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "AI4Science Contributors" },
]
keywords = ["ai4science", "physics-world-model", "pwm", "scientific-ml", "physics-judge", "cassi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
]
claude = [
  # Real Claude integration. Also requires the `claude` CLI on PATH
  # (`npm install -g @anthropic-ai/claude-code`) and either ANTHROPIC_API_KEY
  # in env OR `claude login` for subscription-based auth.
  "claude-agent-sdk>=0.1",
]

[project.scripts]
ai4science = "ai4science.cli:main"

[project.urls]
Homepage = "https://github.com/integritynoble/AI4Science"
Repository = "https://github.com/integritynoble/AI4Science"
"PWM Protocol" = "https://physicsworldmodel.org"

[tool.setuptools.packages.find]
include = ["ai4science*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
ai4science = ["templates/*.md", "examples/**/*.md", "examples/**/*.py", "prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
