[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The CLI command stays `ai4science` (see
# [project.scripts]); only the install name is PWM-branded because the
# bare `ai4science` name is already taken on PyPI. This mirrors Claude
# Code: package `@anthropic-ai/claude-code`, command `claude`.
name = "pwm-ai4science"
dynamic = ["version"]
description = "Open-source contribution tool for Physics World Model (PWM). Create, validate, package, and submit Principles, Specs, Benchmarks, and Solutions for verified AI4Science workflows."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "AI4Science Contributors" },
]
keywords = ["ai4science", "physics-world-model", "pwm", "scientific-ml", "physics-judge", "cassi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "scipy>=1.10",                                  # forward-model physics ops (ndimage/gaussian_filter)
  "httpx>=0.27",                                  # PWM login/billing + founder LLM proxy
  "prompt_toolkit>=3.0",                          # bordered/full-screen TUI (AI4SCIENCE_TUI)
  "pyreadline3>=3.4; sys_platform == 'win32'",    # arrow keys/history on Windows
  "optiland>=0.6.0",                              # Optical design simulation (Phase 0)
  "rayoptics>=0.9.8",                             # Optical design ray tracing (Phase 0)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "build>=1.2",
  "twine>=5.0",
]
claude = [
  # Real Claude integration. Also requires the `claude` CLI on PATH
  # (`npm install -g @anthropic-ai/claude-code`) and either ANTHROPIC_API_KEY
  # in env OR `claude login` for subscription-based auth.
  "claude-agent-sdk>=0.1",
]

[project.scripts]
ai4science = "ai4science.cli:main"

[project.urls]
Homepage = "https://github.com/integritynoble/AI4Science"
Repository = "https://github.com/integritynoble/AI4Science"
Issues = "https://github.com/integritynoble/AI4Science/issues"
"PWM Protocol" = "https://physicsworldmodel.org"

[tool.setuptools.dynamic]
version = { attr = "ai4science.__version__" }

[tool.setuptools.packages.find]
include = ["ai4science*", "pwm_core*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
ai4science = ["templates/*.md", "examples/**/*.md", "examples/**/*.py", "prompts/*.md", "harness/data/*.npz", "harness/data/specs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
