[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# This distribution is the PWM agent RUNTIME (the "core"): it ships the
# `ai4science.*` harness, `pwm_core.*`, and the top-level `pwm_agent_core`
# facade that standalone agent packages import and pin (`pwm-agent-core>=1,<2`).
# The `ai4science` CLI command lives here (see [project.scripts]). The
# `pwm-ai4science` name is now a thin meta-package (core + all agents) built
# separately. The dist version tracks the pwm_agent_core CONTRACT_VERSION major
# (1.x); the internal code version is `ai4science.__version__`.
name = "pwm-agent-core"
version = "1.0.0"
description = "PWM agent runtime (core): the AI4Science harness + pwm_agent_core facade that standalone PWM agent packages run on."
readme = "README.md"
# Runtime contract for standalone agent packages: they import the runtime ONLY
# via the top-level `pwm_agent_core` module (shipped by py-modules). The contract
# surface + version live in pwm_agent_core.py (CONTRACT_VERSION). Agent packages
# pin: pwm-agent-core>=1,<2.
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "AI4Science Contributors" },
]
keywords = ["ai4science", "physics-world-model", "pwm", "scientific-ml", "physics-judge", "cassi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "scipy>=1.10",                                  # forward-model physics ops (ndimage/gaussian_filter)
  "httpx>=0.27",                                  # PWM login/billing + founder LLM proxy
  "prompt_toolkit>=3.0",                          # bordered/full-screen TUI (AI4SCIENCE_TUI)
  "pyreadline3>=3.4; sys_platform == 'win32'",    # arrow keys/history on Windows
  "optiland>=0.6.0",                              # Optical design simulation (Phase 0)
  "rayoptics>=0.9.8",                             # Optical design ray tracing (Phase 0)
  # NOTE: core does NOT depend on the pwm-agent-* packages (that would be a
  # dependency cycle). The full framework (core + all agents) is the separate
  # `pwm-ai4science` meta-package.
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "build>=1.2",
  "twine>=5.0",
]
claude = [
  # Real Claude integration. Also requires the `claude` CLI on PATH
  # (`npm install -g @anthropic-ai/claude-code`) and either ANTHROPIC_API_KEY
  # in env OR `claude login` for subscription-based auth.
  "claude-agent-sdk>=0.1",
]

[project.scripts]
ai4science = "ai4science.cli:main"

[project.urls]
Homepage = "https://github.com/integritynoble/AI4Science"
Repository = "https://github.com/integritynoble/AI4Science"
Issues = "https://github.com/integritynoble/AI4Science/issues"
"PWM Protocol" = "https://physicsworldmodel.org"

[tool.setuptools]
py-modules = ["pwm_agent_core"]

[tool.setuptools.packages.find]
include = ["ai4science*", "pwm_core*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
ai4science = ["templates/*.md", "examples/**/*.md", "examples/**/*.py", "prompts/*.md", "harness/data/*.npz", "harness/data/specs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
